--- a/ProyectoUnidad2/Money Minder/css/styles.css
+++ b/ProyectoUnidad2/Money Minder/css/styles.css
@@ -1,255 +1,207 @@
 body, html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-size: 16px;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	font-size: 16px;
+	font-family: OpenSans;
+}
+#background, #backgroundInicio {
+	position: relative;
+}
+#background::before, #backgroundInicio::before {
+	content: "";
+	background-color: white;
+	opacity: 0.9;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-attachment: fixed;
+	background-position: center;
+	background-size: cover;
 }
 
-#background {
-  position: relative;
+#backgroundInicio::before {
+	background-image: url("../image/background1.webp");
+	z-index: -1;
 }
-
-#background::before {
-  content: "";
-  background-color: black;
-  background-image: url("../image/background1.webp");
-  opacity: 0.9;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-}
-
 .container {
-  display: grid;
-  grid-template-rows: 1fr auto;
-  min-height: 100vh;
+	display: grid;
+	grid-template-rows: 1fr auto;
+	min-height: 100vh;
 }
-
 .sidebar {
-  background-color: #333;
-  color: white;
-  width: 0;
-  overflow: hidden;
-  transition: width 0.3s;
-  position: fixed;
-  height: 100%;
-  top: 0;
+	background-color: #333;
+	color: white;
+	width: 0;
+	overflow: hidden;
+	transition: width 0.3s;
+	position: fixed;
+	height: 100%;
+	top: 0;
+	z-index: 2;
 }
-
 .sidebar-open {
-  width: 300px;
-  z-index: 2;
+	width: 250px;
+	z-index: 2;
+	
 }
-
 .sidebar ul {
-  list-style-type: none;
-  padding: 0;
-  font-size: 150%;
+	list-style-type: none;
+	padding: 0;
+	font-size: 110%;
+}
+.sidebar a:hover, .banner a:hover {
+	background-color: #555;
 }
 
 .sidebar a {
-  text-decoration: none;
-  color: white;
-  padding: 10px;
-  display: block;
-  border-bottom: 1px solid #555;
+	text-decoration: none;
+	color: white;
+	padding: 10px;
+	display: block;
+	border-bottom: 1px solid #555;
+	margin-bottom: 10px;
+	background-color: #444;
+	border-radius: 8px;
+	overflow: hidden;
+	height: 75px;
+	text-align: right;
+	margin-left: auto;
+	background-size: contain;
+	background-repeat: no-repeat;
 }
-
-.sidebar a:hover, .banner a:hover {
-  background-color: #555;
+.sidebar ul li a.selected {
+	background-color: #222222;
+	color: #fff;
+	font-weight: bold;
 }
-
-.banner a {
-  text-decoration: none;
-  color: white;
-  font-size: 125%;
-  width: 15%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  margin-left: auto;
-}
-
 .toggle-btn, .close-btn {
-  background-color: #333;
-  color: white;
-  border: none;
-  cursor: pointer;
-  width: 15%;
-  z-index: 2;
-  font-size: 35px;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  margin-right: auto;
+	background-color: #333;
+	color: white;
+	border: none;
+	cursor: pointer;
+	width: 15%;
+	z-index: 2;
+	font-size: 35px;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	margin-right: auto;
 }
-
 .close-btn:hover, .toggle-btn:hover, .selected {
-  background-color: #272525;
+	background-color: #272525;
 }
-
 .parent {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(12, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  background-color: rgba(0, 0, 0, 0.8);
-  height: 100%;
+	display: grid;
+	grid-template-columns: repeat(10, 1fr);
+	grid-template-rows: repeat(12, 1fr);
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	background-color: rgba(0, 0, 0, 0.8);
+	height: 100%;
 }
-
 .content {
-  grid-area: 2 / 2 / 13 / 10;
-  text-align: center;
-  overflow: auto;
-  z-index: 1;
+	grid-area: 2 / 2 / 13 / 10;
+	text-align: center;
+	overflow: auto;
+	z-index: 1;
 }
 
 .banner {
-  grid-area: 1 / 1 / 2 / 11;
-  background: #333;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	grid-area: 1 / 1 / 2 / 11;
+	background: #333;
+	position: sticky;
+	top: 0;
+	z-index: 2;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 100%;
 }
-
-.sidebar a {
-  margin-bottom: 10px;
-  background-color: #444;
-  border-radius: 8px;
-  overflow: hidden;
-  height: 75px;
-  text-align: right;
-  margin-left: auto;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.sidebar ul li a.selected {
-  background-color: #222222;
-  color: #fff;
-  font-weight: bold;
+.banner a {
+	text-decoration: none;
+	color: white;
+	font-size: 125%;
+	width: 15%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	margin-left: auto;
 }
 
 #opResumen {
-  background-image: url("../image/icon/resumen.png");
+	background-image: url("../image/icon/resumen.png");
 }
-
 #opTransacciones {
-  background-image: url("../image/icon/transacciones.png");
+	background-image: url("../image/icon/transacciones.png");
 }
-
 #opCategorias {
-  background-image: url("../image/icon/categorias.png");
+	background-image: url("../image/icon/categorias.png");
 }
-
 #opInformes {
-  background-image: url("../image/icon/grafico.png");
+	background-image: url("../image/icon/grafico.png");
 }
-
 #opExportar {
-  background-image: url("../image/icon/exportar.png");
+	background-image: url("../image/icon/exportar.png");
 }
-
 .parentContent {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  background: #000000;
-  height: 80%;
-  width: 100%;
-  position: fixed;
-  z-index: 2;
-  margin-top: 10%;
-  background-image: url("../image/fondoInicio.jpg");
-  background-size:contain;
-  background-repeat: no-repeat;
-  opacity: 0.7;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-rows: repeat(4, 1fr);
+	grid-column-gap: 10px;
+	grid-row-gap: 10px;
+	background: #000000;
+	height: 80%;
+	width: 100%;
+	position: fixed;
+	z-index: 2;
+	margin-top: 10%;
+	background-image: url("../image/fondoInicio.jpg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	opacity: 0.7;
 }
-
 .content1 {
-  grid-area: 2 / 4 / 4 / 7;
-  color: #FFFFFF;
-  font-size: 3vw;
-  text-align: right;
-  display: flex;
-  flex-direction: column;
-  align-items: right;
-  padding: 5%;
+	grid-area: 2 / 4 / 4 / 7;
+	color: #FFFFFF;
+	font-size: 3vw;
+	text-align: right;
+	display: flex;
+	flex-direction: column;
+	align-items: right;
+	padding: 5%;
 }
-
 @media (max-width: 768px) {
-  .parentContent {
-    margin-top: 20%;
-  }
-
-.content1 {
-    font-size: 4vw;
-  }
+	.parentContent {
+		margin-top: 20%;
+	}
+	.content1 {
+		font-size: 4vw;
+	}
 }
-
 .content2 {
-  grid-area: 1 / 1 / 5 / 3;
-  color: #FFFFFF;
+	grid-area: 1 / 1 / 5 / 3;
+	color: #FFFFFF;
 }
-
 .linea-horizontal {
-  border-top: 10px solid white;
-  width: 60%;
-  margin-left: auto;
+	border-top: 10px solid white;
+	width: 60%;
+	margin-left: auto;
 }
-
 .stacked-text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
 }
-
 .description {
-  text-align: right;
-  margin: 20px;
+	text-align: right;
+	margin: 20px;
 }
-
 .description p {
-  font-size: 40%;
-  line-height: 1.5;
-  color: #FFFFFF;
-}
-
-/* Estilos específicos para los elementos de egreso */
-
-/* Estilo del título */
-.title {
-  color: white; /* Cambiar el color del título a blanco */
-}
-
-/* Estilo de los inputs, selects y textareas */
-.egreso-input,
-.egreso-select,
-.egreso-textarea {
-  background-color: #f2f2f2; /* Color de fondo deseado */
-  color: black; /* Color de texto original */
-}
-
-/* Estilo de los botones */
-.egreso-button {
-  background-color: #333; /* Color de fondo deseado */
-  color: white; /* Color de texto deseado */
-}
-.iegreso-label {
-  color: white; /* Cambiar el color del texto de los labels a blanco */
-  margin-bottom: 5px; /* Agregar margen inferior para separación */
-  display: block; /* Para que cada label ocupe una línea */
+	font-size: 40%;
+	line-height: 1.5;
+	color: #FFFFFF;
 }
