--- a/ProyectoUnidad2/Money Minder/css/styleEgresos.css
+++ b/ProyectoUnidad2/Money Minder/css/styleEgresos.css
@@ -83,7 +83,9 @@
 #metodo,
 #responsable,
 #fecha,
-#observacion {
+#observacion
+#usuario
+#contrasena{
     background-color: #f2f2f2;
     color: #333333;
     border: none;
